--- a/ListOfDevices/src/main/resources/application.properties
+++ b/ListOfDevices/src/main/resources/application.properties
@@ -9,11 +9,11 @@ server.servlet.context-path=/test_boot
 
 #spring.datasource.url=jdbc:mysql://mysqldb/ListOfDevices
 
-spring.datasource.url=jdbc:mysql://mysqldb:3306/ListOfDevices?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mysqldb:3306/ListOfDevices?autoReconnect=true&useSSL=false&serverTimezone=UTC
 
 
 spring.datasource.username=root
-spring.datasource.password=manager
+spring.datasource.password=root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
