--- a/ListOfDevices/src/main/resources/application.properties
+++ b/ListOfDevices/src/main/resources/application.properties
@@ -20,6 +20,26 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=always
 
+
+
+
+
+# Hikari will use the above plus the following to setup connection pooling
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.poolName=SpringBootJPAHikariCP
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
+
+
+
+# Enable logging to verify that HikariCP is used, the second entry is specific to HikariCP
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
+
+
 # JPA properties
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
